# autoxml

./: CMakeCache.txt  CMakeLists.txt  Makefile  autoxmlConfig.cmake  autoxmlTargets.cmake  cmake_install.cmake
examples/: autobuild.ax  autobuild.xml
lib/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake  libtinyxml2.8.0.0.dylib  libtinyxml2.8.dylib  libtinyxml2.dylib  xmltest
output/: autoxml-test
tests/: CMakeLists.txt  Makefile  cmake_install.cmake
tests/autoxml-test/: CMakeLists.txt  Makefile  autobuild.xml  cmake_install.cmake
tests/autoxml-test/include/: AXFile.h  AXFileTree.h
tests/autoxml-test/src/: main.cpp
