set(test_NAME autoxml-test)
set(ax2xml_LIB tinyxml2)
set(CMAKE_CXX_STANDARD_REQUIRED 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -O0")
include_directories(include)
aux_source_directory(src SRCS)
add_executable(${test_NAME} ${SRCS})
target_link_libraries(${test_NAME} ${ax2xml_LIB})
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/output)